crates/cli/tests/snapshots/manual_inherit_from__fix_1c16345cb9b626582debbafe601ab47f140ab59d51e21d99f4d4acb9fa293328.snap
---
source: crates/cli/tests/manual_inherit_from.rs
expression: "\"let x.y.z = 2; in { z = x.y.z; }\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let x.y.z = 2; in { z = x.y.z; }
+let x.y.z = 2; in { inherit (x.y) z; }
