crates/cli/tests/snapshots/manual_inherit_from__fix_91d2ed9db61681451cd61469e24d376da4179dd3fa5e48f1558bfec90b4be2fb.snap
---
source: crates/cli/tests/manual_inherit_from.rs
expression: "\"let x.y.z.w = 2; in { w = x.y.z.w; }\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let x.y.z.w = 2; in { w = x.y.z.w; }
+let x.y.z.w = 2; in { inherit (x.y.z) w; }
