crates/cli/tests/snapshots/manual_inherit_from__fix_a1dd16d76c1e3a76c0da83256a89a945dccc51f490fd14269722a647f8cda9ad.snap
---
source: crates/cli/tests/manual_inherit_from.rs
expression: "\"let a.b = 2; in { b = a.c; }\""
---

