crates/cli/tests/snapshots/manual_inherit_from__lint_1c16345cb9b626582debbafe601ab47f140ab59d51e21d99f4d4acb9fa293328.snap
---
source: crates/cli/tests/manual_inherit_from.rs
expression: "\"let x.y.z = 2; in { z = x.y.z; }\""
---
[W04] Warning: Assignment instead of inherit from
   ╭─[<temp_file_path>:1:21]
   │
 1 │ let x.y.z = 2; in { z = x.y.z; }
   ·                     ─────┬────  
   ·                          ╰────── This assignment is better written with inherit
───╯
