crates/cli/tests/snapshots/manual_inherit_from__lint_91d2ed9db61681451cd61469e24d376da4179dd3fa5e48f1558bfec90b4be2fb.snap
---
source: crates/cli/tests/manual_inherit_from.rs
expression: "\"let x.y.z.w = 2; in { w = x.y.z.w; }\""
---
[04] Warning: Assignment instead of inherit from
   ╭─[<temp_file_path>:1:23]
   │
 1 │ let x.y.z.w = 2; in { w = x.y.z.w; }
   ·                       ──────┬─────  
   ·                             ╰─────── This assignment is better written with inherit
───╯
