crates/cli/tests/snapshots/manual_inherit_from__lint_bc8af8e49439367bb7ba482a6d7d899b49dd1ddf52fde65da08f33e29fcf432e.snap
---
source: crates/cli/tests/manual_inherit_from.rs
expression: "\"let x.y.z = 2; in { a = x.y.z; }\""
---

